# autogcr

./: .env.example  .gitignore  README.md  assignment_manager.py  docs.md  download.py  main.py  models.py  packer.py  prompts.py  pyproject.toml  solve.py  test.py  upload.py
autogcr/: assignments.py  endpoints.py  heq.py  {'assignment_names': ['ass2', 'assignmen.py  {'assignment_names': ['assignment 2', 'a.py
downloads/Fri 10-12 SE Lab/: .~lock.Eval 2_solution.docx#
solvers/: simple_solver.py  solve.py
utils/: __init__.py  markdown2docx.py  paper.py  preprocess_markdown2docx.py  utils.py
