[tool.poetry]
name = "autogcr"
version = "0.1.0"
description = ""
authors = ["codeblech <my.malikyash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nodriver = "^0.38.post1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
